# mpt_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt  main.cpp
backend/carina/: map_base.hpp  timemap_wrapper.hpp
backend/carina/capd/: basic_types.hpp  c0rect2set.hpp  c1rect2set.hpp  map.cpp  map.hpp  ode_solver.cpp  ode_solver.hpp  solution_curve.hpp  timemap.cpp  timemap.hpp
doc/: beamercolorthemetexsx.sty  beamerinnerthemetexsx.sty  beamerouterthemetexsx.sty  beamerthemetexsx.sty  ode_overview.tex
report/: architecture.drawio  report.tex
src/: capd_process.hpp  capd_process.params.hpp  config.hpp  get_capd_process_id.cpp  get_capd_process_id.hpp  main.cpp  parameters.cpp  parameters.hpp  parameters_buffer.cpp  parameters_buffer.hpp  parameters_buffer_multiclient.hpp  process.hpp  qr_code.cpp  qr_code.hpp  session.cpp  session.hpp  session_id_generator.hpp  session_manager.cpp  session_manager.hpp  stream_wrapper.hpp
src/server/: custom_response.hpp  mime_type_map.hpp  on_connection_notifier.cpp  on_connection_notifier.hpp  on_request_notifier.cpp  on_request_notifier.hpp  request_buffer.hpp  server.cpp  server.file_application.cpp  server.file_application.hpp  server.file_application.impl.cpp  server.file_application.impl.hpp  server.hpp  socket.hpp  string_view.tool.hpp  uri.hpp
src/server/socket/: addrinfo_iterator.hpp  serv_addrinfo.hpp  socket.hpp  socket_internal.hpp  types.hpp
website/: app.js  index.html  style.css
